// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Pages can display no page at all 1`] = `
<TestProvider app={{...}}>
  <Provider router={{...}} app={{...}} history={{...}}>
    <WithStyles(inject-Pages) components={{...}}>
      <inject-Pages classes={{...}} components={{...}}>
        <Pages classes={{...}} components={{...}} app={{...}} page="Foo" loading={false} uri="/" router={{...}} history={{...}} loadMasks={{...}}>
          <div className="RSFPages-root-1">
            <WithStyles(LoadMask) show={false} fullscreen={true}>
              <LoadMask classes={{...}} show={false} fullscreen={true}>
                <div style={[undefined]} className="RSFLoadMask-root-3 RSFLoadMask-fullscreen-4">
                  <WithStyles(CircularProgress) className={[undefined]} color="secondary">
                    <CircularProgress classes={{...}} className={[undefined]} color="secondary" size={40} thickness={3.6} value={0} variant="indeterminate">
                      <div className="MuiCircularProgress-root-6 MuiCircularProgress-colorSecondary-10 MuiCircularProgress-indeterminate-8" style={{...}} role="progressbar">
                        <svg className="MuiCircularProgress-svg-11" viewBox="0 0 50 50">
                          <circle className="MuiCircularProgress-circle-12 MuiCircularProgress-circleIndeterminate-14" style={{...}} cx={25} cy={25} r={20} fill="none" strokeWidth={3.6} />
                        </svg>
                      </div>
                    </CircularProgress>
                  </WithStyles(CircularProgress)>
                </div>
              </LoadMask>
            </WithStyles(LoadMask)>
          </div>
        </Pages>
      </inject-Pages>
    </WithStyles(inject-Pages)>
  </Provider>
</TestProvider>
`;

exports[`Pages displays a custom default loading component 1`] = `
<TestProvider app={{...}}>
  <Provider router={{...}} app={{...}} history={{...}}>
    <WithStyles(inject-Pages) loading={[Function: loading]} components={{...}}>
      <inject-Pages classes={{...}} loading={[Function: loading]} components={{...}}>
        <Pages classes={{...}} loading={true} components={{...}} app={{...}} page="Product" uri="/" router={{...}} history={{...}} loadMasks={{...}}>
          <div className="RSFPages-root-1">
            <WithStyles(LoadMask) show={true} fullscreen={true}>
              <LoadMask classes={{...}} show={true} fullscreen={true}>
                <div style={[undefined]} className="RSFLoadMask-root-3 RSFLoadMask-show-5 RSFLoadMask-fullscreen-4">
                  <WithStyles(CircularProgress) className={[undefined]} color="secondary">
                    <CircularProgress classes={{...}} className={[undefined]} color="secondary" size={40} thickness={3.6} value={0} variant="indeterminate">
                      <div className="MuiCircularProgress-root-6 MuiCircularProgress-colorSecondary-10 MuiCircularProgress-indeterminate-8" style={{...}} role="progressbar">
                        <svg className="MuiCircularProgress-svg-11" viewBox="0 0 50 50">
                          <circle className="MuiCircularProgress-circle-12 MuiCircularProgress-circleIndeterminate-14" style={{...}} cx={25} cy={25} r={20} fill="none" strokeWidth={3.6} />
                        </svg>
                      </div>
                    </CircularProgress>
                  </WithStyles(CircularProgress)>
                </div>
              </LoadMask>
            </WithStyles(LoadMask)>
            <div data-page="Product" style={{...}}>
              <Product onBefore={[Function]} onAfter={[Function]}>
                <div>
                  Product
                </div>
              </Product>
            </div>
          </div>
        </Pages>
      </inject-Pages>
    </WithStyles(inject-Pages)>
  </Provider>
</TestProvider>
`;

exports[`Pages displays the correct page 1`] = `
<TestProvider app={{...}}>
  <Provider router={{...}} app={{...}} history={{...}}>
    <WithStyles(inject-Pages) components={{...}}>
      <inject-Pages classes={{...}} components={{...}}>
        <Pages classes={{...}} components={{...}} app={{...}} page="Category" loading={false} uri="/" router={{...}} history={{...}} loadMasks={{...}}>
          <div className="RSFPages-root-1">
            <WithStyles(LoadMask) show={false} fullscreen={true}>
              <LoadMask classes={{...}} show={false} fullscreen={true}>
                <div style={[undefined]} className="RSFLoadMask-root-3 RSFLoadMask-fullscreen-4">
                  <WithStyles(CircularProgress) className={[undefined]} color="secondary">
                    <CircularProgress classes={{...}} className={[undefined]} color="secondary" size={40} thickness={3.6} value={0} variant="indeterminate">
                      <div className="MuiCircularProgress-root-6 MuiCircularProgress-colorSecondary-10 MuiCircularProgress-indeterminate-8" style={{...}} role="progressbar">
                        <svg className="MuiCircularProgress-svg-11" viewBox="0 0 50 50">
                          <circle className="MuiCircularProgress-circle-12 MuiCircularProgress-circleIndeterminate-14" style={{...}} cx={25} cy={25} r={20} fill="none" strokeWidth={3.6} />
                        </svg>
                      </div>
                    </CircularProgress>
                  </WithStyles(CircularProgress)>
                </div>
              </LoadMask>
            </WithStyles(LoadMask)>
            <div data-page="Category" style={{...}}>
              <Category onBefore={[Function]} onAfter={[Function]}>
                <div>
                  Category
                </div>
              </Category>
            </div>
          </div>
        </Pages>
      </inject-Pages>
    </WithStyles(inject-Pages)>
  </Provider>
</TestProvider>
`;

exports[`Pages displays the default loading component 1`] = `
<TestProvider app={{...}}>
  <Provider router={{...}} app={{...}} history={{...}}>
    <WithStyles(inject-Pages) components={{...}}>
      <inject-Pages classes={{...}} components={{...}}>
        <Pages classes={{...}} components={{...}} app={{...}} page="Product" loading={true} uri="/" router={{...}} history={{...}} loadMasks={{...}}>
          <div className="RSFPages-root-1">
            <WithStyles(LoadMask) show={true} fullscreen={true}>
              <LoadMask classes={{...}} show={true} fullscreen={true}>
                <div style={[undefined]} className="RSFLoadMask-root-3 RSFLoadMask-show-5 RSFLoadMask-fullscreen-4">
                  <WithStyles(CircularProgress) className={[undefined]} color="secondary">
                    <CircularProgress classes={{...}} className={[undefined]} color="secondary" size={40} thickness={3.6} value={0} variant="indeterminate">
                      <div className="MuiCircularProgress-root-6 MuiCircularProgress-colorSecondary-10 MuiCircularProgress-indeterminate-8" style={{...}} role="progressbar">
                        <svg className="MuiCircularProgress-svg-11" viewBox="0 0 50 50">
                          <circle className="MuiCircularProgress-circle-12 MuiCircularProgress-circleIndeterminate-14" style={{...}} cx={25} cy={25} r={20} fill="none" strokeWidth={3.6} />
                        </svg>
                      </div>
                    </CircularProgress>
                  </WithStyles(CircularProgress)>
                </div>
              </LoadMask>
            </WithStyles(LoadMask)>
            <div data-page="Product" style={{...}}>
              <Product onBefore={[Function]} onAfter={[Function]}>
                <div>
                  Product
                </div>
              </Product>
            </div>
          </div>
        </Pages>
      </inject-Pages>
    </WithStyles(inject-Pages)>
  </Provider>
</TestProvider>
`;
